<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="rem.proxie.activities.Login">

    <ScrollView android:id="@id/loginScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@id/loginButtonBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@id/loginUsernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/loginUsernameHint"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="textCapWords"
                android:imeOptions="actionNext"/>

            <EditText
                android:id="@id/loginPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/loginPasswordHint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:imeOptions="actionSend"/>

            <Button
                android:background="@color/blue_500"
                android:layout_gravity="center"
                android:paddingRight="@dimen/abc_action_button_min_width_material"
                android:paddingLeft="@dimen/abc_action_button_min_width_material"
                android:id="@id/loginSignInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/loginSignInButtonText"
                android:textStyle="bold"
                android:onClick="attemptLogin"/>

            <CheckBox
                android:id="@id/loginStayLoggedInCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/loginStayLoggedInCheckBoxText"
                android:defaultValue="false" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>



